Fix Image upload error
Message error didn't show up when the image was too big

--- a/FrontEnd/assets/style.css
+++ b/FrontEnd/assets/style.css
@@ -177,7 +177,7 @@ margin: auto;
 	box-shadow: 0px 4px 14px rgba(0, 0, 0, 0.09);
 }
 
-input[type="submit"]{
+input[type="submit"], .greenbtn{
 	font-family: 'Syne';
 	font-weight: 700;
 	color: white;
